# ChangeLog for dev-perl/Devel-Symdump
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-Symdump/ChangeLog,v 1.55 2008/04/29 06:06:21 yuval Exp $

*Devel-Symdump-2.08 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Devel-Symdump-2.08.ebuild:
  Version bump

  27 Apr 2008; Alexis Ballier <aballier@gentoo.org>
  Devel-Symdump-2.07.ebuild:
  keyword ~x86-fbsd

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Devel-Symdump-2.07.ebuild:
  Stable for HPPA too.

  06 Jul 2007; Tom Gall <tgall@gentoo.org> Devel-Symdump-2.07.ebuild:
  stable on ppc64

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> Devel-Symdump-2.07.ebuild:
  alpha/ia64/x86 stable

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Devel-Symdump-2.07.ebuild:
  ppc stable

  24 Apr 2007; Bryan Østergaard <kloeri@gentoo.org>
  Devel-Symdump-2.07.ebuild:
  Add ~mips keyword, bug 173295.

  15 Apr 2007; Markus Rothe <corsair@gentoo.org>
  Devel-Symdump-2.06.04.ebuild:
  Stable on ppc64

  14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Devel-Symdump-2.07.ebuild:
  amd64 stable

  10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Devel-Symdump-2.07.ebuild:
  sparc stable

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org>
  Devel-Symdump-2.06.04.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  Devel-Symdump-2.06.04.ebuild:
  Stable on Alpha + IA64.

*Devel-Symdump-2.07 (07 Jan 2007)

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +Devel-Symdump-2.07.ebuild:
  Version bump

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Devel-Symdump-2.06.04.ebuild:
  Stable on ppc.

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  Devel-Symdump-2.06.04.ebuild:
  sparc stable

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  Devel-Symdump-2.06.04.ebuild:
  amd64 stable

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>